// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Permission flag upsert should fail when permissionFlagKeys contains invalid enum value 1`] = `
{
  "extensions": {
    "code": "BAD_USER_INPUT",
    "http": {
      "status": 400,
    },
    "userFriendlyMessage": "An error occurred.",
  },
  "message": "Value \"INVALID_FLAG\" does not exist in \"PermissionFlagType\" enum.",
  "name": "GraphQLError",
}
`;

exports[`Permission flag upsert should fail when role is not editable (system role) 1`] = `
{
  "extensions": {
    "code": "METADATA_VALIDATION_FAILED",
    "errors": {
      "permissionFlag": [
        {
          "errors": [
            {
              "code": "ROLE_BELONGS_TO_ANOTHER_APPLICATION",
              "message": "Cannot modify permissions on a role owned by another application",
              "userFriendlyMessage": "Cannot modify permissions on a role owned by another application.",
            },
            {
              "code": "ROLE_NOT_EDITABLE",
              "message": "Role is not editable",
              "userFriendlyMessage": "This role cannot be modified because it is a system role. Only custom roles can be edited.",
            },
          ],
          "flatEntityMinimalInformation": {
            "roleUniversalIdentifier": Any<String>,
            "universalIdentifier": Any<String>,
          },
          "metadataName": "permissionFlag",
          "status": "fail",
          "type": "create",
        },
      ],
    },
    "message": "Validation failed for 1 permissionFlag",
    "summary": {
      "permissionFlag": 1,
      "totalErrors": 1,
    },
    "userFriendlyMessage": "Metadata validation failed",
  },
  "message": "Validation errors occurred while upserting permission flags",
  "name": "GraphQLError",
}
`;

exports[`Permission flag upsert should fail when roleId does not exist 1`] = `
{
  "extensions": {
    "code": "NOT_FOUND",
    "subCode": "ROLE_NOT_FOUND",
    "userFriendlyMessage": "The role you are trying to modify could not be found.",
  },
  "message": "Role not found",
  "name": "NotFoundError",
}
`;

exports[`Permission flag upsert should fail when roleId is not a valid UUID 1`] = `
{
  "extensions": {
    "code": "GRAPHQL_VALIDATION_FAILED",
    "http": {
      "status": 400,
    },
    "userFriendlyMessage": "An error occurred.",
    "value": "invalid-uuid",
  },
  "message": "Invalid UUID: 'invalid-uuid'",
  "name": "ValidationError",
}
`;
